--- a/extensions/shed/0.1.1/extension.toml
+++ b/extensions/shed/0.1.1/extension.toml
@@ -3,7 +3,7 @@ name = "shed"
 version = "0.1.1"
 versionCityJSON = "2.0"
 description = "Example of an Extension for modelling sheds; meant as a template to learn how to construct an Extension"
-authors = ["[Hugo Ledoux](@hugoledoux)"]
+authors = ["[Hugo Ledoux](https://github.com/hugoledoux)"]
 # repository = "https://github.com/myusername/cityjson-shed-extension"
 # doi = ["https://someurl.org"]
 keywords = ["sustainability", "urban"]
