--- a/extensions/lcc/0.3.0/extension.toml
+++ b/extensions/lcc/0.3.0/extension.toml
@@ -1,5 +1,5 @@
 [extension]
-name = "llc"
+name = "lcc"
 description = "Extension to model the topology of the city as a linear cell complex based on a combinatorial map."
 version = "0.3.0"
 versionCityJSON = "2.0"
