--- a/extensions/noise/2.0.0/extension.toml
+++ b/extensions/noise/2.0.0/extension.toml
@@ -3,7 +3,7 @@ name = "noise"
 version = "2.0.0"
 versionCityJSON = "2.0"
 description = "Extension for Noise Emission Simulation"
-authors = ["Hugo Ledoux <https://3d.bk.tudelft.nl/hledoux>"]
+authors = ["[Hugo Ledoux](https://3d.bk.tudelft.nl/hledoux)"]
 repository = "https://www.cityjson.org/tutorials/extension/"
 # doi = ["https://someurl.org"]
 keywords = ["noise"]
